--- a/CameraMovements/css/style.css
+++ b/CameraMovements/css/style.css
@@ -12,54 +12,24 @@ canvas {
 	z-index:-1;
 }
 
-#container{
-	width:400px;
-	display:flex;
-}
-
-#left, #right{
-	width:50%;
-}
-
-.player{
-	height:20px;
-}
-
-#o1 {
-	width: 50px;
-	height: 50px;
-	background: #4ECDC4;
-	border-radius: 50%;
-	position: absolute;
-}
-#o2 {
-	border: 10px solid;
-	position: absolute;
-	border-color: transparent transparent red transparent;
-	top: 100px;
-	left: 100px;
-
-}
-
 #camera-presets {
   transition: opacity 0.5s linear;
   user-select: none;
   position: absolute;
-  top: 80px;
-  right: 115px;
+  justify-content: center;
   color: #fff;
-  font-size: 0
+  width: 100%;
+  display: flex;
 }
 
-#camera-presets ul {
-  list-style: none;
+.container {
   font-size: 30px;
   text-align: center;
+  display: flex;
   -webkit-font-smoothing: antialiased
 }
 
-#camera-presets ul li {
-  position: absolute;
+.preset-button {
   font-size: 16px;
   font-family: "arial";
   font-weight: bold;
@@ -72,38 +42,14 @@ canvas {
   line-height: 33px;
   width: 33px;
   height: 36px;
+  cursor: pointer;
+  margin: 10px;
 }
 
-#camera-presets ul li:hover {
+.presets:hover {
 	cursor: pointer;
 }
 
-#camera-presets ul li:active {
+.presets:active {
   margin-top: 3px
-}
-
-#camera-presets ul li:nth-child(1) {
-  left: -35px;
-  top: -35px
-}
-
-#camera-presets ul li:nth-child(2) {
-  top: -35px
-}
-
-#camera-presets ul li:nth-child(3) {
-  left: -35px;
-}
-
-#camera-presets ul li:nth-child(4) {
-  top: 35px
-}
-
-#camera-presets ul li:nth-child(5) {
-  top: 105px
-}
-
-#camera-presets ul li:nth-child(6) {
-  left: -35px;
-  top: 105px
 }
