--- a/CameraMovements/css/virtualInput.css
+++ b/CameraMovements/css/virtualInput.css
@@ -1,3 +1,53 @@
+#joystick1,
+#joystick2{
+  bottom: 30px;
+}
+
+#joystick1{ left: 50px; }
+#joystick2{ right: 50px; }
+
+@media ( max-width: 768px ) {
+  #joystick1,
+  #joystick2{
+    bottom:0px;
+  }
+
+  #joystick1{ left: 0px; }
+  #joystick2{ right: 0px; }
+}
+
+#button1{
+  bottom: 240px;
+  right: 180px;
+}
+
+#button2{
+  bottom: 240px;
+  right: 80px;
+}
+
+#button3{
+  bottom: 340px;
+  right: 80px;
+}
+
+@media ( max-width: 768px ) {
+  #button1{
+    right: 160px;
+    bottom: 200px;
+  }
+
+  #button2{
+    right: 60px;
+    bottom: 200px;
+  }
+
+  #button3{
+    right: 60px;
+    bottom: 300px;
+  }        
+
+}
 
 .virtualInput-joystick{
   position: absolute;
@@ -22,19 +72,19 @@
   position: absolute;
   box-sizing: border-box;
   border-radius: 50%;
-  background: rgba( 0, 0, 0, .5 );
+  background: rgba( 204, 204, 204, .5 );
 }
 
 .virtualInput-joystick__arrowUp,
 .virtualInput-joystick__arrowRight,
 .virtualInput-joystick__arrowDown,
 .virtualInput-joystick__arrowLeft{
-  fill: #000;
+  fill: #ccc;
 }
 
 .virtualInput-joystick__circle{
   fill: none;
-  stroke: #000;
+  stroke: #ccc;
 }
 
 .virtualInput-button{
@@ -54,7 +104,7 @@
   cursor: pointer;
   display: table-cell;
   vertical-align: middle;
-  background: rgba( 0, 0, 0, .5 );
+  background: rgba( 255, 255, 255, .5 );
   border: 1px solid #333;
   border-radius: 50%;
 }
@@ -78,5 +128,5 @@
   vertical-align: middle;
   border: 1px solid #333;
   border-radius: 3px;
-  background: rgba( 0, 0, 0, .5 );
+  background: rgba( 255, 255, 255, .5 );
 }
