--- a/BallKick/css/virtualJoystick.css
+++ b/BallKick/css/virtualJoystick.css
@@ -1,14 +1,3 @@
-body {
-	padding: 0;
-	margin: 0;
-	-ms-touch-action: none ;
-      touch-action: none ;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-
 #joystickStatic,
 #joystickDynamic {
 	-ms-touch-action : none ;
@@ -25,7 +14,7 @@ body {
 	bottom: 90px;
 }
 
-.joystick-stick {
+.virtualJoystic-stick {
 	position: absolute;
 	top: calc( 50% - 32px );
 	left: calc( 50% - 32px );
@@ -39,7 +28,7 @@ body {
 	cursor: pointer;
 };
 
-.virtualInput-joystick{
+.virtualJoystick{
   -ms-touch-action: none ;
       touch-action: none ;
   -webkit-user-select: none;
@@ -48,7 +37,7 @@ body {
           user-select: none;
 }
 
-.virtualInput-joystick-svg{
+.virtualJoystick-svg{
   position: absolute;
   top: 0;
   left: 0;
@@ -56,14 +45,14 @@ body {
   opacity: .5;
 }
 
-.virtualInput-joystick-arrowUp,
-.virtualInput-joystick-arrowRight,
-.virtualInput-joystick-arrowDown,
-.virtualInput-joystick-arrowLeft{
+.virtualJoystick-arrowUp,
+.virtualJoystick-arrowRight,
+.virtualJoystick-arrowDown,
+.virtualJoystick-arrowLeft{
   fill: #ccc;
 }
 
-.virtualInput-joystick-circle{
+.virtualJoystick-circle{
   fill: none;
   stroke: #ccc;
 }			
